[gd_scene load_steps=19 format=2]

[ext_resource path="res://game/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/FeedBacks.gd" type="Script" id=2]
[ext_resource path="res://game/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ParamManager.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 574.308, 10 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 1.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0301293, 0.9642 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0336 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 8.12753e-44
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 10.0
scale_curve = SubResource( 4 )
color = Color( 0.2, 0.4, 0.2, 1 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 1

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 8.12753e-44
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 10.0
scale_curve = SubResource( 4 )
color = Color( 0.4, 0.2, 0.2, 1 )

[sub_resource type="CircleShape2D" id=9]
radius = 18.8148

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 30.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 8.12753e-44
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 20.0
scale_curve = SubResource( 4 )
color = Color( 0.4, 0.2, 0.2, 1 )

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform float lod: hint_range(0, 5);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, lod).rgb;
	COLOR.g *= 0.9;
	COLOR.b *= 0.9;
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/lod = 3.0

[sub_resource type="OpenSimplexNoise" id=14]
seed = 10

[sub_resource type="NoiseTexture" id=15]
noise = SubResource( 14 )

[node name="FeedBacks" instance=ExtResource( 4 )]
script = ExtResource( 2 )

[node name="Params" parent="." index="0"]
margin_right = -817.0

[node name="Title" type="Label" parent="Params/VBoxContainer" index="0"]
margin_right = 108.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Feedbacks demo"
align = 1

[node name="Grid" parent="Params/VBoxContainer" index="1"]
margin_top = 18.0
margin_right = 108.0
margin_bottom = 18.0

[node name="Walls" type="StaticBody2D" parent="." index="1"]

[node name="Up" type="CollisionShape2D" parent="Walls" index="0"]
position = Vector2( 520, -10 )
shape = SubResource( 1 )

[node name="Down" type="CollisionShape2D" parent="Walls" index="1"]
position = Vector2( 519.427, 609.818 )
shape = SubResource( 1 )

[node name="Right" type="CollisionShape2D" parent="Walls" index="2"]
position = Vector2( 1033.88, 299.353 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="Walls" index="3"]
position = Vector2( 196, 310 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Player" parent="." index="2" instance=ExtResource( 1 )]
position = Vector2( 575, 341 )
physics_material_override = SubResource( 2 )

[node name="Trail" type="Particles2D" parent="Player" index="1"]
visible = false
show_behind_parent = true
amount = 20
lifetime = 0.3
local_coords = false
process_material = SubResource( 5 )
texture = SubResource( 7 )

[node name="Mob" parent="." index="3" instance=ExtResource( 3 )]
position = Vector2( 926.316, 442.105 )
AIM_SPEED = 5000.0
COEF_FRICT = 2.0
COEF_ACC = 0.2
AIM_PATH = NodePath("../Player")

[node name="Trail2" type="Particles2D" parent="Mob" index="0"]
visible = false
show_behind_parent = true
amount = 20
lifetime = 0.3
local_coords = false
process_material = SubResource( 8 )
texture = SubResource( 7 )

[node name="CollisionShape2D" parent="Mob" index="1"]
shape = SubResource( 9 )

[node name="Mob2" parent="." index="4" instance=ExtResource( 3 )]
position = Vector2( 301.053, 421.053 )
AIM_SPEED = 400.0
COEF_FRICT = 5.0
COEF_ACC = 2.0
AIM_PATH = NodePath("../Player")

[node name="Trail3" type="Particles2D" parent="Mob2" index="1"]
visible = false
show_behind_parent = true
amount = 40
lifetime = 0.3
local_coords = false
process_material = SubResource( 10 )
texture = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="." index="5"]
position = Vector2( 512, 300 )
current = true

[node name="Shader" type="TextureRect" parent="." index="6"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 15 )
expand = true

[node name="Tween" type="Tween" parent="." index="7"]

[node name="Score" type="HBoxContainer" parent="." index="8"]
margin_left = 250.666
margin_top = 27.9335
margin_right = 397.666
margin_bottom = 47.9335
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Score" index="0"]
margin_top = 2.0
margin_right = 43.0
margin_bottom = 16.0
text = "Score :"

[node name="ColorRect" type="ColorRect" parent="Score" index="1"]
margin_left = 47.0
margin_right = 47.0
margin_bottom = 19.0

[node name="ColorRect2" type="ColorRect" parent="Score" index="2"]
margin_left = 51.0
margin_right = 51.0
margin_bottom = 19.0
color = Color( 0.831373, 0.286275, 0.160784, 1 )

[node name="Tween" type="Tween" parent="Score" index="3"]
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="collision" from="Player" to="." method="_on_Collision"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="collision" from="Mob" to="." method="_on_Collision"]
[connection signal="hurt" from="Mob" to="." method="_on_Mob_hurt"]
[connection signal="collision" from="Mob2" to="." method="_on_Collision"]
[connection signal="hurt" from="Mob2" to="." method="_on_Mob_hurt"]

[editable path="Mob"]
